tests/integration/snapshots/test_compilation_error_fixture.stderr.txt
Error: Cannot compile script file [ROOT]/contracts/counter[LINE]: error: field `body2` doesn't exist in type `InMessage`

    // in function `onInternalMessage`
   6 |     val msg = lazy AllowedMessage.fromSlice(in.body2);
     |                                                ^^^^^

